[gd_scene load_steps=3 format=3 uid="uid://dqaxis52rrqn0"]

[ext_resource type="Script" path="res://daemons/oracle_console.gd" id="1_1okrr"]
[ext_resource type="Theme" uid="uid://dhjt02la7o8du" path="res://assets/aletheia_theme.tres" id="1_qforb"]

[node name="OracleConsole" type="Window"]
title = "Oracle Console"
position = Vector2i(96, 96)
size = Vector2i(512, 512)
theme = ExtResource("1_qforb")
script = ExtResource("1_1okrr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Generate"

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "(Status)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
